--- a/index.html
+++ b/index.html
@@ -571,10 +571,57 @@
       </button>
 
       <ul class="mobile-menu">
-        <li><a href="" class="link">Studio</a></li>
-        <li><a href="" class="link">Portfolio</a></li>
+        <li><a href="./index.html" class="link active">Studio</a></li>
+        <li><a href="./portfolio.html" class="link">Portfolio</a></li>
         <li><a href="" class="link">Contacts</a></li>
       </ul>
+      <div class="mobiledown">
+        <address class="adress">
+          <ul class="list">
+            <li>
+              <a href="mailto:info@devstudio.com" class="adreslink link"
+                >info@devstudio.com</a
+              >
+            </li>
+            <li>
+              <a href="tel:11(000)1111111" class="adreslink link"
+                >+11 (000) 111-11-11</a
+              >
+            </li>
+          </ul>
+        </address>
+        <ul class="socialicons">
+          <li class="socialicon">
+            <a class="sociallink" href="">
+              <svg class="svgproperties" width="24" height="24">
+                <use href="./images/icons.svg#icon-instagram-2"></use>
+              </svg>
+            </a>
+          </li>
+          <li class="socialicon">
+            <a class="sociallink" href="">
+              <svg class="svgproperties" width="24" height="24">
+                <use href="./images/icons.svg#icon-twitter-1"></use>
+              </svg>
+            </a>
+          </li>
+          <li class="socialicon">
+            <a class="sociallink" href="">
+              <svg class="svgproperties" width="24" height="24">
+                <use href="./images/icons.svg#icon-facebook-1"></use>
+              </svg>
+            </a>
+          </li>
+          <li class="socialicon">
+            <a class="sociallink" href="">
+              <svg class="svgproperties" width="24" height="24">
+                <use href="./images/icons.svg#icon-linkedin-1"></use>
+              </svg>
+            </a>
+          </li>
+        </ul>
+        
+      </div>
     </div>
     <script src="./js/mobile-menu.js"></script>
     <script src="./js/modal.js"></script>
