--- a/portfolio.html
+++ b/portfolio.html
@@ -366,8 +366,8 @@
       </button>
 
       <ul class="mobile-menu">
-        <li><a href="./index.html" class="link active">Studio</a></li>
-        <li><a href="./portfolio.html" class="link">Portfolio</a></li>
+        <li><a href="./index.html" class="link">Studio</a></li>
+        <li><a href="./portfolio.html" class="link active">Portfolio</a></li>
         <li><a href="" class="link">Contacts</a></li>
       </ul>
       <div class="mobiledown">
