--- a/index.html
+++ b/index.html
@@ -177,6 +177,7 @@
             <li class="teammember">
               <img
                 src="images/MarkGuerro.jpg"
+                srcset="./images/MarkGuerro@2x.jpg 2x"
                 alt="middle age man in a blue shirt with short black stubble"
                 width="264"
                 height="260"
@@ -219,6 +220,7 @@
             <li class="teammember">
               <img
                 src="images/TomFord.jpg"
+                srcset="./images/TomFord@2x.jpg 2x"
                 alt="smiling young man with blond hair with short stubble"
                 width="264"
                 height="260"
@@ -261,6 +263,7 @@
             <li class="teammember">
               <img
                 src="images/CamilaGarcia.jpg"
+                srcset="./images/KamilaGarcia@2x.jpg 2x"
                 alt="Young attractive girl with dark brown long hair"
                 width="264"
                 height="260"
@@ -303,6 +306,7 @@
             <li class="teammember">
               <img
                 src="images/DanielWilson.jpg"
+                srcset="./images/DanielWilson@2x.jpg 2x"
                 alt="Young skiny guy with black curly hair and short stubble"
                 width="264"
                 height="260"
@@ -620,7 +624,6 @@
             </a>
           </li>
         </ul>
-        
       </div>
     </div>
     <script src="./js/mobile-menu.js"></script>
